<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_screen_brightness"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/textcolor" />
    <SeekBar
        android:id="@+id/brightness"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:progress="10"
        android:layout_centerHorizontal="true"
        android:max="100"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_alarm_volume"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:textColor="@color/textcolor" />
    <SeekBar
        android:id="@+id/alarm"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:progress="100"
        android:max="100"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_music_volume"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:textColor="@color/textcolor" />
    <SeekBar
        android:id="@+id/music"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_centerHorizontal="true"
        android:progress="100"
        android:max="100"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_screen_volume"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:textColor="@color/textcolor" />
    <SeekBar
        android:id="@+id/ringtone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:progress="100"
        android:layout_centerHorizontal="true"
        android:max="100"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_system_volume"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:textColor="@color/textcolor" />
    <SeekBar
        android:id="@+id/system"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:layout_centerHorizontal="true"
        android:progress="100"
        android:max="100"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjust_voice_volume"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:textColor="@color/textcolor" />
    <SeekBar
        android:id="@+id/voice"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:progress="100"
        android:layout_centerHorizontal="true"
        android:max="100"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_percentage_info"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="510dp"
        android:textColor="@color/textcolor" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:minHeight="35dip"
        android:maxHeight="35dip"
        android:scaleY="8"
        android:max="100"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"/>
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:textSize="30sp"
        android:textColor="@color/textcolor"
        android:layout_marginTop="550dp"
        />

</RelativeLayout>